# demo-observability-grafana-ecs-microservices

./: .dockerignore  .env.example  .gitignore  LICENSE.txt  README.md  config.alloy  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alloy/: config.alloy  local.config.alloy
apps/service-a/: Dockerfile  pyproject.toml
apps/service-a/src/service_a/: main.py
apps/service-a/tests/: test_main.py
apps/service-b/: pyproject.toml
apps/service-b/src/service_b/: main.py
libs/otel_sdk/: pyproject.toml
libs/otel_sdk/src/otel_sdk/: __init__.py  tracing.py
src/demo_observability_grafana_ecs_microservices/: __about__.py
tests/: __init__.py
