[project]
name = "service-a"
version = "0.1.0"
description = "Service A"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi~=0.112",
    "uvicorn[standard]~=0.30",
    "requests~=2.32",
    "otel_sdk @ file:../../libs/otel_sdk"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
    "pytest~=8.2",
    "pytest-mock~=3.14",
    "httpx~=0.27",
]

[tool.hatch.envs.default.scripts]
start = "PYTHONPATH=src uvicorn service_a.main:app --reload --port 8000"
test = "PYTHONPATH=src pytest -q"